--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   gap: 7px;
   margin-bottom: -20px;
+  margin-right: auto;
 }
 
 .Phone {
@@ -14,8 +15,10 @@
 .Person {
   border: 1px solid black;
   border-radius: 3px;
-
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  height: 70px;
+  width: 260px;
 }
